2002-03-04  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_string.c (bk_decode_base64): Don't demand that base64 encoded
	buffer to be string.

2002-03-01  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_oscompat.h (BK_INIT_FUN, BK_FINISH_FUN) [__INSURE__]:
	use asm() to set up ctors/dtors since that doesn't offend insure++
	
2002-02-27  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_time.c (bk_time_ntp_parse): Parse ntp time into struct
	timespec [format function still needed].

2002-02-25  James Tanis  <jtt@saint.sysdetect.com>

	* src/proto.c (main): Clarify the arc preprocessing.

2002-02-22  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_addrgroup.c (do_net_init_af_inet_tcp_connect): remove dead code
	(tcp_end): remove dead code

	* lib/b_pollio.c (polling_io_ioh_handler): suppress Insure error

	* include/libbk.h (BK_STRINGIFY): expand argument into string form

	* include/libbk_oscompat.h (BK_FUNCNAME): portable use of __func__
	(ntohll, htonll): cast everything to u_int64_t before 32 bit shifts
	suppress Insure error
	
2002-02-20  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h: declare bk_ioh_print{,f}

2002-02-20  Brian Lindauer  <lindauer@sysdetect.com>

	* lib/b_ioh.c: Added b_ioh_print and b_ioh_printf

2002-02-19  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_ioh.c (bk_ioh_fdctl): fcntl F_SETFL takes value, not pointer

2002-02-18  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_relay.c (bk_relay_iohhandler): update to use new coalesce interface.

	* lib/b_ioh.c (bk_ioh_coalesce): New flags to force (on input)
	copies and (on output) to indicate whether a copy had not
	happened. 
	(bk_ioh_coalesce): Do *not* free input vptr (violation of IOH API).

2002-02-11  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (BK_OR): improve doxygenation

	* include/libbk_oscompat.h: undef _CONSTRUCTOR_ATTRIBUTE,_INIT_PRAGMA
	for Insure++ compilation
	
2002-02-11  James Tanis  <jtt@saint.sysdetect.com>
